--- a/Traffic_Sign_Classifier.html
+++ b/Traffic_Sign_Classifier.html
@@ -31235,7 +31235,7 @@ QAAAAABJRU5ErkJggg==
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="New-Images-predicted-with-57%(4/7)-Accuracy">New Images predicted with 57%(4/7) Accuracy<a class="anchor-link" href="#New-Images-predicted-with-57%(4/7)-Accuracy">&#182;</a></h3>
+<h3 id="New-Images-predicted-with-71%(-Accuracy">New Images predicted with 71%( Accuracy<a class="anchor-link" href="#New-Images-predicted-with-71%(-Accuracy">&#182;</a></h3>
 </div>
 </div>
 </div>
